--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <img class="banner" src="%PUBLIC_URL%/banners/banner-eye-transparent.png" />
+  <img class="banner" alt="opsdroid background" src="%PUBLIC_URL%/banners/banner-eye-transparent.png" />
   <div id="root"></div>
   <!--
       This HTML file is a template.
